--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
@@ -88,6 +88,11 @@
                                         <h3 class="text-dark mb-1">Entrega</h3>
                                         break;
                                     }
+                                      case 3:
+                                    {
+                                        <h3 class="text-dark mb-1">Cotización BackOffice</h3>
+                                        break;
+                                    }
                             }
                         }
 
