--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -946,10 +946,11 @@
                                 <select id="idTraslado" class="form-control" asp-for="Encabezado.TipoReparacion" onchange="javascript: onChangeTipoMovimiento();">
                                     <option value="0">Seleccione</option>
 
+                                    <option value="4">1- Cotizar BackOffice </option>
 
-                                    <option value="1">1- Solicitud </option>
-                                    <option value="2">2- Devolución </option>
-                                    <option value="3">3- Cotizar </option>
+                                    <option value="1">2- Solicitud </option>
+                                    <option value="2">3- Devolución </option>
+                                    <option value="3">4- Cotizar </option>
 
 
 
