--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
@@ -98,7 +98,10 @@
 
                         <div>CardCode: @Model.Input.CardCode</div>
                         <div>Cliente: @Model.Input.CardName</div>
-                        <div>Telefono: @Model.Cliente.Phone1</div>
+                        <div>Telefono: @Model.Llamada.NumeroPersonaContacto</div>
+                        <div>Persona Contacto: @Model.Llamada.PersonaContacto</div>
+                        <div>Email Persona Contacto: @Model.Llamada.EmailPersonaContacto</div>
+
                         <div class="row col-sm-4">
 
                             <div class="form-group">
