--- a/Sicsoft.Checkin.Web/Pages/Shared/_Layout.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <title>@ViewData["Title"]</title>
+    <script src="~/css/assets/vendor/jquery/jquery-3.3.1.min.js"></script>
 
     <link rel="stylesheet" href="/css/assets/vendor/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/assets/vendor/fonts/circular-std/style.css" />
@@ -35,6 +36,7 @@
     <link rel="stylesheet" href="/css/assets/vendor/fonts/material-design-iconic-font/css/materialdesignicons.min.css" />
     <link rel="stylesheet" href="/css/assets/vendor/charts/c3charts/c3.css" />
     <link rel="stylesheet" href="/css/assets/vendor/fonts/flag-icon-css/flag-icon.min.css" />
+    
 
 
     <!--Tablas-->
@@ -203,7 +205,6 @@
 
 
     <!-- Mainly scripts -->
-    <script src="~/css/assets/vendor/jquery/jquery-3.3.1.min.js"></script>
     <script src="~/css/assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="~/css/assets/vendor/slimscroll/jquery.slimscroll.js"></script>
     <script src="~/css/assets/libs/js/main-js.js"></script>
@@ -226,7 +227,9 @@
     <script src="~/css/assets/vendor/jspf/jspdf.plugin.autotable.js"></script>
     <script src="~/css/assets/vendor/jspf/jspdf.plugin.autotable.min.js"></script>
     <script src="~/css/assets/vendor/html2pdf/html2pdf.bundle.js"></script>
-
+    <script src="~/css/assets/vendor/jspf/jspdf.min.js"></script>
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.1/html2pdf.bundle.min.js"></script>
     @*<script src="~/css/build/js/custom.min.js"></script>*@
 
 
