--- a/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
@@ -34,6 +34,9 @@
             top: 0;
             background: white;
         }
+        .createPDF{
+                font-size: 14px;
+            }
     </style>
 
 }
@@ -49,10 +52,16 @@
     </script>
 
     <script>
-
+var html = '';
+var specialElementHandlers = null;
         $(document).ready(function () {
             jQuery(document).ready(function ($) {
-
+                 specialElementHandlers = {
+                    "#editor": function(element, render)
+                    {
+                        return true;
+                    }
+                }
             });
 
 
@@ -64,6 +73,40 @@
 
         });
 
+        function ImprimirPantalla()
+        {
+            try {
+               // window.print();
+                var margins = {
+                    top: 10,
+                    bottom: 10,
+                    left: 10,
+                    width: 595
+                  };
+                
+
+                html = $(".html").html();
+                html2pdf(html, {
+                margin:1,
+                padding:0,
+                filename: 'Movimientos.pdf',
+                image: { type: 'jpeg', quality: 1 },
+                html2canvas: { scale: 2,  logging: true },
+                jsPDF: { unit: 'in', format: 'A2', orientation: 'P' },
+                class: ImprimirPantalla
+            });
+
+            }catch(e)
+            {
+                console.log(e);
+                Swal.fire({
+                                     icon: 'error',
+                                     title: 'Oops...',
+                                     text: 'Ha ocurrido un error al intentar imprimir ' + e
+
+                                 })
+            }
+        }
 
 
 
@@ -88,7 +131,7 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="text" class="form-control form-control-lg" id="id" asp-for="BTS.id" hidden>
 
-    <div class="row">
+    <div class="row ">
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
@@ -312,5 +355,232 @@
         </div>
 
     </div>
+    <button type="button" onclick="javascript: ImprimirPantalla()" class="btn btn-rounded btn-outline-brand"> Imprimir</button> &nbsp;
     <button type="button" id="Guardar" onclick="javascript: onGuardar();" class="btn btn-rounded btn-outline-success">Guardar Cambios</button>
 </form>
+
+
+                                <!--HTML PARA IMPRIMIR-->
+
+
+<div class="html" hidden >
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                 <div class="card-header">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h2>Traslado # @Model.BTS.DocEntry</h2>
+                        </div>
+                        <div class="col-md-4">
+
+
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+
+                    <div class="row">
+                        <div class="col-md-6 pr-1">
+
+                            <div class="form-group">
+                                <label>Producto</label>
+                                <input type="text" class="form-control form-control-lg"  asp-for="Producto" readonly>
+
+                            </div>
+
+
+                        </div>
+
+
+
+
+                        <div class="col-md-6 pr-1">
+
+                             <div class="form-group">
+                                <label>Fecha Creación</label>
+                                <input type="date" class="form-control form-control-lg" id="" asp-for="BTS.Fecha" readonly>
+
+
+                            </div>
+
+
+                        </div>
+
+                        <div class="col-md-4 pr-1">
+
+                            <div class="form-group">
+                                <label>Tipo Movimiento</label>
+                                <select id="idTraslado" class="form-control" asp-for="BTS.TipoMovimiento" disabled="disabled">
+                                    <option value="0">Seleccione</option>
+
+
+                                    <option value="1">1- Solicitud </option>
+                                    <option value="2">2- Devolución </option>
+
+
+                                </select>
+
+                            </div>
+
+
+                        </div>
+
+                       
+                        <div class="col-md-4 pr-1">
+
+                            <div class="form-group">
+                                <label>Técnico</label>
+                                <input type="text" class="form-control form-control-lg" id="" asp-for="Tecnico" readonly>
+
+                            </div>
+
+
+                        </div>
+                        <div class="col-md-4 pl-1">
+
+                            <div class="form-group">
+                                <label>Llamada</label>
+                                <input type="text" class="form-control form-control-lg" id="" asp-for="Encabezado.idLlamada" readonly>
+
+                            </div>
+
+
+                        </div>
+                        <div class="col-md-4 pr-1">
+
+                            <div class="form-group">
+                                <label>Cliente</label>
+                                <input type="text" class="form-control form-control-lg" id="" asp-for="Cliente" readonly>
+
+                            </div>
+
+
+                        </div>
+                        <div class="col-md-4 pr-1">
+
+                            <div class="form-group">
+                                <label>Bodega Inicial</label>
+                                <input type="text" class="form-control form-control-lg" id="" asp-for="BTS.BodegaInicial" readonly>
+
+                            </div>
+
+
+                        </div>
+                        <div class="col-md-4 pl-1">
+
+                            <div class="form-group">
+                                <label>Bodega Destino</label>
+                                <input type="text" class="form-control form-control-lg" id="" asp-for="BTS.BodegaFinal" readonly>
+
+                            </div>
+
+
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <div class="row">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+            <div class="card">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h5>Materiales</h5>
+                        </div>
+                        <div class="col-md-4">
+
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table ">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Producto</th>
+                                    <th>Cantidad</th>
+                                    <th>Ubicación</th>
+
+
+
+
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.BTS.Detalle)
+                                {
+                                    <tr>
+                                        <td>@item.id</td>
+                                        <td>@(item.ItemCode)</td>
+
+
+                                        <td>@item.Cantidad</td>
+                                        @{var itemCode = item.ItemCode.Trim().Split('|')[0].ToString().Trim();}
+                                        <td>@( Model.ProductosHijos.Where(a => a.codSAP == itemCode).FirstOrDefault() == null ? "" : Model.ProductosHijos.Where(a => a.codSAP == itemCode).FirstOrDefault().Localizacion )</td>
+
+
+                                    </tr>
+                                }
+
+
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Producto</th>
+                                    <th>Cantidad</th>
+                                    <th>Ubicación</th>
+
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <br />
+    <br />
+    <div class="row">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+             <div class="card">
+
+                 <div class="card-body">
+                     <div class="row">
+                          <div class="col-md-6 pr-1">
+
+                             _________________________________
+                             <br />
+                             <h5>Firma Entregado</h5>
+
+
+                        </div>
+
+
+                        <div class="col-md-6 pl-1">
+
+                             _________________________________
+                             <br />
+                             <h5>Firma Recibido</h5>
+
+
+                        </div>
+                     </div>
+                     
+
+                 </div>
+                 </div>
+        </div>
+    </div>
+</div>
