--- a/Sicsoft.Checkin.Web/Pages/Tecnicos/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Tecnicos/Index.cshtml
@@ -101,6 +101,8 @@
                                 <th>ID</th>
                                 <th>Cod. SAP</th>
                                 <th>Nombre</th>
+                                <th>Letra</th>
+
                                 <th>Acción</th>
 
                             </tr>
@@ -112,6 +114,8 @@
                                     <td>@item.id</td>
                                     <td>@item.idSAP</td>
                                     <td>@item.Nombre</td>
+                                    <td>@item.Letra</td>
+
                                     <td>
 
                                         <a asp-page="./Editar" asp-route-id="@item.id" title="Editar" class="btn btn-rounded btn-outline-warning"> Editar</a> &nbsp;
@@ -127,6 +131,8 @@
                                 <th>ID</th>
                                 <th>Cod. SAP</th>
                                 <th>Nombre</th>
+                                <th>Letra</th>
+
                                 <th>Acción</th>
 
                             </tr>
