--- a/Sicsoft.Checkin.Web/Pages/Tecnicos/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Tecnicos/Editar.cshtml
@@ -49,19 +49,24 @@
                     <input asp-for="Input.id" hidden />
 
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="form-group">
                                 <label>Cod SAP</label>
                                 <input type="text" class="form-control form-control-lg" id="codsap" placeholder="Cod. SAP" asp-for="Input.idSAP" required>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="form-group">
                                 <label for="nombre">Nombre</label>
                                 <input type="text" id="nombre" class="form-control form-control-lg" asp-for="Input.Nombre" required placeholder="Nombre">
                             </div>
                         </div>
-
+                          <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="letra">Letra</label>
+                                <input type="number" id="letra" class="form-control form-control-lg" asp-for="Input.Letra" required placeholder="Letra de SAP">
+                            </div>
+                        </div>
                     </div>
 
 
